<resources>
    <string name="app_name">FBooking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="chua_co_phong_yeu_thich">Bạn chưa yêu thích phòng nào</string>
    <string name="khach_san">Khách sạn FPOLY</string>
    <string name="thoi_gian">Thoi gian </string>
    <string name="ngay_nhan_phong">Ngày nhận phòng: </string>
    <string name="so_dem">Số đêm: </string>
    <string name="ngay_tra_phong">Ngày trả phòng: </string>
    <string name="thong_tin_phong">Thông tin phòng: </string>
    <string name="fill_thong_tin_phong">Thông tin phòng</string>
    <string name="phong_so">Phòng số: </string>
    <string name="loai_phong">Loại phòng: </string>
    <string name="hang_phong">Hạng phòng: </string>
    <string name="so_nguoi">Số người: </string>
    <string name="mo_ta">Mô tả: </string>
    <string name="khach_hang">Khách hàng</string>
    <string name="thong_tin_khach_hang">Thông tin khách hàng</string>
    <string name="so_dien_thoai">Số điện thoại: </string>
    <string name="ten_khach_hang">Tên khách hàng: </string>
    <string name="cmnd">CMND/CCCD: </string>
    <string name="email">Email: </string>
    <string name="yeu_cau_khach_hang">Yêu cầu của khách hàng</string>
    <string name="dat_cho">Đặt cho: </string>
    <string name="gio_den">Giờ đến: </string>
    <string name="don_gia">Đơn giá: </string>
    <string name="thu_them">Phí thu thêm: </string>
    <string name="du_kien">Tổng dự kiến: </string>
    <string name="price">1500000 đ</string>
    <string name="quay_lai">Quay lại</string>
    <string name="dat_phong_thanh_cong">Đặt phòng thành công</string>
    <string name="quay_ve_trang_chu">Quay về trang chủ</string>
    <string name="quy_khach_1">Bước 1: Qúy khách vui lòng vào đợi lễ tân xác nhận và ấn vào thông tin chuyển khoản ở màn hình "Thông tin người dùng".</string>
    <string name="quy_khach_2">Bước 2: Qúy khách vui lòng ấn vào nút "Thông tin chuyển khoản" để đọc chi tiết về ngân hàng cũng như là lưu ý của khách sạn.</string>
    <string name="thong_tin_lien_he">Thông tin liên hệ</string>
    <string name="hint_ho_va_ten">Họ và tên</string>
    <string name="hint_so_dien_thoai">Số điện thoại</string>
    <string name="hint_cmnd">CMND/CCCD</string>
    <string name="hint_email">Email</string>
    <string name="thong_tin_chuyen_di">Thông tin chuyến đi</string>
    <string name="hint_ngay_nhan">Ngày nhận</string>
    <string name="hint_ngay_tra">Ngày trả</string>
    <string name="hint_so_dem">Số đêm</string>
    <string name="hint_nguoi_lon">Người lớn</string>
    <string name="hint_tre_em">Trẻ em</string>
    <string name="yeu_cau_chuyen_di">Yêu cầu chuyến đi</string>
    <string name="dat_cho_ban_than">Đặt cho bản thân</string>
    <string name="dat_cho_nguoi_khac">Đặt cho người khác</string>
    <string name="gio_nhan">Giờ nhận</string>
    <string name="gio_tra">Giờ trả</string>
    <string name="thanh_toan_khi_nhan_phong">Thanh toán khi nhận phòng</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="thong_tin_bi_trong">Thông tin bị trống!</string>
    <string name="chua_nhap_ho_ten">Bạn chưa nhập họ và tên!</string>
    <string name="chua_nhap_so_dien_thoai">Bạn chưa nhập số điện thoại!</string>
    <string name="sai_so_dien_thoai">Sai định dạng số điện thoại!</string>
    <string name="chua_nhap_cmnd">Bạn chưa nhập CMND / CCCD!</string>
    <string name="chua_nhap_email">Bạn chưa nhập email!</string>
    <string name="sai_dinh_dang_email">Sai định dạng email!</string>
    <string name="chua_nhap_ngay_nhan">Bạn chưa nhập ngày nhận phòng!</string>
    <string name="chua_nhap_ngay_tra">Bạn chưa nhập ngày trả phòng!</string>
    <string name="sai_ngay_nhan_tra_phong">Sai ngày nhận / trả phòng!</string>
    <string name="sai_thoi_gian_nhan_tra_phong">Sai thời gian nhận / trả phòng!</string>
    <string name="sai_so_dem">Số đêm phải lớn hơn 0!</string>
    <string name="chua_nhap_nguoi_lon">Bạn chưa nhập số người!</string>
    <string name="so_nguoi_lon_hon">Số người phải lớn hơn 0!</string>
    <string name="so_nguoi_be_hon">Số người phải bé hơn hoặc bằng 4!</string>
    <string name="chua_nhap_tre_em">Bạn chưa nhập số trẻ em!</string>
    <string name="chua_nhap_so_dem">Bạn chưa nhập số đêm!</string>
    <string name="chua_nhap_thoi_gian_nhan">Bạn chưa nhập thời gian nhận phòng!</string>
    <string name="chua_nhap_thoi_gian_tra">Bạn chưa nhập thời gian trả phòng!</string>
    <string name="phong_da_dat">Phòng đã đặt</string>
    <string name="xoa_tat_ca">Xóa tất cả</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="fboking">FBOOKING</string>
    <string name="hint_mat_khau">Mật khẩu</string>
    <string name="nho_mat_khau">Nhớ mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="chuyen_khoan_ngan_hang">Chuyển khoản ngân hàng</string>
    <string name="chon_tai_khoan_giao_dich">Chọn tài khoản giao dịch</string>
    <string name="vietcombank">Vietcombank</string>
    <string name="noi_dung_vietcombank">Số tài khoản: 0451000504702\n\nChủ tài khoản: Fpoly Hotel
    \n\nChi nhánh: Hà Nội\n\nNội dung: họ và tên - số phòng - id - đặt cọc tiền phòng</string>
    <string name="techcombank">Techcombank</string>
    <string name="noi_dung_techcombank">Số tài khoản: 19036190267011\n\nChủ tài khoản: Fpoly Hotel
    \n\nChi nhánh: Hà Nội\n\nNội dung: họ và tên - số phòng - id - đặt cọc tiền phòng</string>
    <string name="luu_y">*Lưu ý: </string>
    <string name="noi_dung_luu_y">- Qúy khách đặt cọc tối thiểu 20% để đặt phòng.\n\n- Trường
        hợp khi khách hàng đã thanh toán tại ngân hàng, khi khách hàng huỷ phòng sẽ bị thu 20% hoá đơn.\n\n- Nếu
        quý khách chuyển 100% tiền phòng, khi hủy phòng thì khách sạn sẽ hoàn lại 80% vào số tài khoản đã chuyển tiền cho khách sạn\n\n- Mọi
        thắc mắc xin quý khách liên hệ đến số điện thoại 0123456789 để được giải đáp thắc mắc</string>
    <string name="tien_dat_coc">Tiền đặt cọc: </string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="luu_y_chon_gio">Nếu quý khách nhận phòng trước thời gian quy định, khách sạn sẽ thu thêm phí tùy theo khung giờ (Phí thu thêm sẽ theo phần trăm giá của phòng).
    \n- Sau 14:00 PM: Không thu thêm phí.
    \n- Trong khoảng 5:00 AM - 9:00 AM: Thu thêm 50% giá phòng.
        \n- Trong khoảng 9:00 AM - 14:00 PM: Thu thêm 50% giá phòng.
    </string>
    <string name="fboking_hotel">FBOOKING - FPOLY HOTEL</string>
    <string name="toi_dat_phong">Tới đặt phòng</string>
    <string name="hint_ngay_sinh">Ngày sinh</string>
    <string name="hint_xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="da_co_tai_khoan">Đã có tài khoản?</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="fboking_hotel_slogan">FPOLY HOTEL - BOOKING APP</string>
    <string name="pho_thong">Phổ thông</string>
    <string name="cao_cap">Cao cấp</string>
    <string name="sang_trong">Sang trọng</string>
    <string name="phong_don">Phòng đơn</string>
    <string name="phong_doi">Phòng đôi</string>
    <string name="phong_hai_giuong">Phòng 2 giường</string>
    <string name="wifi">Wifi</string>
    <string name="be_boi">Bể bơi</string>
    <string name="do_xe">Đỗ xe</string>
    <string name="nha_hang">Nhà hàng</string>
    <string name="le_tan">Lễ tân</string>
    <string name="thang_may">Thang máy</string>
    <string name="loi_xe_lan">Lối xe lăn</string>
    <string name="tap_gym">Tập gym</string>
    <string name="phong_hop">Phòng họp</string>
    <string name="dua_don">Đưa đón</string>
    <string name="giat_la">Giặt là</string>
    <string name="khac">Khác</string>
    <string name="hint_so_nguoi">Số người</string>
    <string name="hint_tang">Tầng</string>
    <string name="gia">Giá</string>
    <string name="tien_ich">Tiện ích</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="huy">Hủy</string>
    <string name="danh_sach_yeu_thich">Danh sách yêu thích</string>
    <string name="phong_dat_nhieu">Phòng được đặt nhiều nhất</string>
    <string name="xin_chao">Xin chào</string>
    <string name="ngay_sinh">Ngày sinh: </string>
    <string name="mat_khau">Mật khẩu: </string>
    <string name="chua_cap_nhat">Chưa cập nhật</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="thong_tin_chuyen_khoan">Thông tin chuyển khoản</string>
    <string name="huong_dan_su_dung">Hướng dẫn sử dụng</string>
    <string name="cap_nhat_thong_tin_ca_nhan">Cập nhật thông tin cá nhân</string>
    <string name="dang_tai">Đang tải...</string>
    <string name="fbooking_ha_noi">Fbooking Hà Nội.</string>
    <string name="tinh_trang">Tình trạng: </string>
    <string name="path">https://hotelfpoly.herokuapp.com/uploads/%1$s</string>
    <string name="vnd">%1$s đ</string>
    <string name="vnd_2">%2$s đ</string>
    <string name="phong_detail">Phòng: %1$s</string>
    <string name="hang_detail">Hạng: %1$s</string>
    <string name="loai_phong_detail">Loại phòng: %1$s</string>
    <string name="so_nguoi_detail">Số người/phòng: %1$s</string>
    <string name="mo_ta_detail">Mô tả: %1$s</string>
    <string name="sai_ngay">Sai ngày nhận / trả phòng!</string>
    <string name="loi">Lỗi</string>
    <string name="dem">%1$s đêm</string>
    <string name="dang_nhap_tiep_tuc">Đăng nhập để tiếp tục!</string>
    <string name="phong_toi_thieu_1">Phòng đơn chỉ được tối thiểu 1 người!</string>
    <string name="phong_toi_thieu_2">Phòng đôi chỉ được tối thiểu 2 người!</string>
    <string name="phong_toi_thieu_4">Phòng 2 giường chỉ được tối thiểu từ 1 đến 4 người!</string>
    <string name="check_nhan_phong">Ngày nhận phòng: %1$s</string>
    <string name="check_so_dem">Số đêm: %1$s</string>
    <string name="check_tra_phong">Ngày trả phòng: %1$s</string>
    <string name="check_phong_so">Phòng số: %1$s</string>
    <string name="check_loai_phong">Loại phòng: %1$s</string>
    <string name="check_hang_phong">Hạng phòng: %1$s</string>
    <string name="check_so_nguoi">Số người/phòng: %1$s</string>
    <string name="check_mo_ta">Mô tả: %1$s</string>
    <string name="check_ten_khach">Tên khách hàng: %1$s</string>
    <string name="check_so_dien_thoai">Số điện thoại: %1$s</string>
    <string name="check_cmnd">CMND/CCCD: %1$s</string>
    <string name="check_email">Email: %1$s</string>
    <string name="check_dat_phong_cho">Đặt phòng cho: %1$s</string>
    <string name="check_gio_den">Giờ đến: %1$s</string>
    <string name="check_don_gia">Đơn giá: %1$s</string>
    <string name="fill_phong_so">Phòng số: %1$s</string>
    <string name="fill_loai_phong">Loại phòng: %1$s</string>
    <string name="fill_hang_phong">Hạng phòng: %1$s</string>
    <string name="fill_gia_phong">Giá phòng: %1$s</string>
    <string name="his_phong_so">Phòng số: %1$s</string>
    <string name="his_ten">Họ và tên: %1$s</string>
    <string name="his_cmnd">CMND/CCCD: %1$s</string>
    <string name="his_email">Email: %1$s</string>
    <string name="his_thoi_gian_nhan">Ngày nhận: %1$s / Thời gian nhận: %2$s</string>
    <string name="his_thoi_gian_tra">Thời trả: %1$s / Thời gian trả %2$s</string>
    <string name="his_so_dien_thoai">Số điện thoại: %1$s</string>
    <string name="his_gia_tien">Đơn giá: %1$s</string>
    <string name="phong_cho_xac_nhan">Danh sách phòng chờ xác nhận</string>
    <string name="dich_vu_khach_san">Dịch vụ khách sạn</string>
    <string name="phong_duoc_dat_nhieu">Phòng được đặt nhiều nhất</string>
    <string name="khuyen_mai">Khuyến mãi trong năm</string>
    <string name="phong_benh">Phòng ngừa dịch bệnh</string>
    <string name="thuc_hien">Chúng ta nên thực hiện những biện pháp phòng ngừa an toàn nào khi đi du lịch?</string>
</resources>