<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_editor_absoluteX="@dimen/dp_1"
    app:layout_editor_absoluteY="@dimen/dp_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_5"
        tools:context=".booking.CheckAgainActivity">

        <TextView
            android:id="@+id/textView3"
            style="@style/text_title_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khach_san"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_color_grey"
            android:padding="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/textView6"
                style="@style/text_title_check_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_date_check_in_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngay_nhan_phong"
                app:drawableStartCompat="@drawable/ic_calender_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/tv_date_check_in_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_date_check_in_again"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/tv_title_night_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_dem"
                app:drawableStartCompat="@drawable/ic_night_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_date_check_in_again" />

            <TextView
                android:id="@+id/tv_night_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_night_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_date_check_in_again" />

            <TextView
                android:id="@+id/tv_title_date_check_out_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngay_tra_phong"
                app:drawableLeftCompat="@drawable/ic_calender_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_night_again" />

            <TextView
                android:id="@+id/tv_date_check_out_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_date_check_out_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_night_again" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_color_grey"
            android:padding="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <TextView
                android:id="@+id/textView7"
                style="@style/text_title_check_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thong_tin_phong"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_room_number_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phong_so"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/tv_room_number_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_room_number_again"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/tv_title_room_type_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loai_phong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_room_number_again" />

            <TextView
                android:id="@+id/tv_room_type_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_room_type_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_room_number_again" />

            <TextView
                android:id="@+id/tv_title_rank_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hang_phong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_room_type_again" />

            <TextView
                android:id="@+id/tv_rank_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_rank_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_room_type_again" />

            <TextView
                android:id="@+id/tv_title_people_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_nguoi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rank_again" />

            <TextView
                android:id="@+id/tv_people_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_people_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rank_again" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView8"
            style="@style/text_title_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Khách hàng"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_color_grey"
            android:padding="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TextView
                android:id="@+id/textView9"
                style="@style/text_title_check_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thong_tin_khach_hang"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_name_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_khach_hang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/tv_name_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_name_again"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/tv_title_phone_number_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_dien_thoai"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name_again" />

            <TextView
                android:id="@+id/tv_phone_number_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_phone_number_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name_again" />

            <TextView
                android:id="@+id/tv_title_id_person_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number_again" />

            <TextView
                android:id="@+id/tv_id_person_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_id_person_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number_again" />

            <TextView
                android:id="@+id/tv_title_email_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_id_person_again" />

            <TextView
                android:id="@+id/tv_email_again"
                style="@style/text_content_check_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_title_email_again"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_id_person_again" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_title_price_again"
            style="@style/text_title_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_toStartOf="@id/tv_price_again"
            android:text="@string/don_gia"
            app:layout_constraintEnd_toStartOf="@+id/tv_price_again"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

        <TextView
            android:id="@+id/tv_price_again"
            style="@style/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_again"
            style="@style/text_button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_cancel_detail"
            android:text="@string/quay_lai"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_pay_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_price_again" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open_pay_again"
            style="@style/text_button_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_room_detail"
            android:text="@string/thanh_toan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel_again"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_price_again" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>