<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_room"
            android:layout_width="@dimen/dp_300"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_title_hotel_favorite"
                style="@style/text_title_name_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fbooking_ha_noi" />

            <TextView
                android:id="@+id/tv_title_room_number_favorte"
                style="@style/text_title_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_hotel_favorite"
                android:text="@string/phong_so" />

            <TextView
                android:id="@+id/tv_room_number_favortie"
                style="@style/text_info_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_hotel_favorite"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toEndOf="@id/tv_title_room_number_favorte" />

            <TextView
                android:id="@+id/tv_title_rank_room_favorte"
                style="@style/text_title_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_room_number_favortie"
                android:text="@string/hang_phong" />

            <TextView
                android:id="@+id/tv_rank_room_favorite"
                style="@style/text_info_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_room_number_favorte"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toEndOf="@id/tv_title_rank_room_favorte" />

            <TextView
                android:id="@+id/tv_title_type_room"
                style="@style/text_title_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_rank_room_favorte"
                android:text="@string/loai_phong" />

            <TextView
                android:id="@+id/tv_type_room_favorite"
                style="@style/text_info_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_rank_room_favorte"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toEndOf="@id/tv_title_type_room" />

            <TextView
                android:id="@+id/tv_title_price_room"
                style="@style/text_title_room_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_type_room_favorite"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/don_gia" />

            <TextView
                android:id="@+id/tv_price_room_favorite"
                style="@style/text_room_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_type_room_favorite"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_toRightOf="@+id/tv_title_price_room"
                android:text="@string/price" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>